# InfoGraph_WD_Assignment_backend

./: README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
ANYVEHICLE/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
ANYVEHICLE_project/: .env  asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
